projects/bentley-bootstrap/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: harbor-database
  namespace: harbor
spec:
  podSelector:
    matchLabels:
      component: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: harbor

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: harbor-redis
  namespace: harbor
spec:
  podSelector:
    matchLabels:
      component: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: harbor
